2006-07-29  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/figures/gnome-commander_dialog_adv_rename.png:
	* doc/C/figures/gnome-commander_window.png:
	* doc/C/gnome-commander.xml:
	* doc/Makefile.am:
	Updated docs

2006-07-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.c:
	Detect malformed (empty) 'connections' file

2006-07-19  Piotr Eljasiak  <epiotr@use.pl>

	* plugins/test/Makefile.am:
	Do not install test plugin

	* src/gnome-cmd-con-ftp.c:
	* src/gnome-cmd-con-ftp.h:
	* src/gnome-cmd-data.c:
	* src/gnome-cmd-ftp-dialog.c:
	Added partial support for setting ftp remote dir

2006-07-18  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/Makefile.am:
	Set PLUGIN_DIR in Makefile.am

2006-07-17  <dmacks@netspace.org>

	* plugins/cvs/Makefile.am:
	* plugins/fileroller/Makefile.am:
	* plugins/test/Makefile.am:
	Incorrect use of Makefile linker flags

2006-07-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-device.c:
	* src/gnome-cmd-data.c:
	* src/utils.c:
	Added some minor safety precautions for fgets().

	* cofigure.in:
	* data/gnome-commander.spec.in:
	Added glib dependencies (>=2.6.0)

2006-06-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-menu.c:
	* src/useractions.c:
	* src/useractions.h:
	* src/utils.c:
	* src/utils.h:
	Added new entries ("GNOME Commander on the Web", "Report a Problem") to Help menu

2006-06-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-chmod-dialog.c:
	* src/gnome-cmd-chown-dialog.c:
	Fixed problem with refreshing after chown or chmod

	* src/useractions.c:
	i18n

2006-06-15  Magnus Stålnacke  <jemamo@telia.com>

	* pixmaps/internal-viewer.xpm:
	New internal viewer icon.

2006-06-15  Assaf Gordon  <agordon88@gmail.com>

	* pixmaps/internal-viewer.xpm:
	* pixmaps/Makefile.am:
	* src/gnome-cmd-file.c:
	* src/imageloader.c:
	* src/imageloader.h:
	New internal viewer icon.

2006-05-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.c: